# cubyte

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  fly.toml  regalloc-registers.bin.bak
docs/: assembler-notation-ebnf.md  codegen-plan.md  new-ass-notation.md  rough-cubit-spec.md  using-cubyte.md  yap.txt
examples/: branch.cbyte  branch.cubin  counter.cbyte  counter.cubin  div3.cbyte  div3.cubin  fib.cbyte  fib.cubin  grade.cbyte  input_echo.cbyte  input_echo.cubin  loopish.cbyte  loopish.cubin  macro_test.cbyte  prompt_echo.cbyte  prompt_echo.cubin  square.cbyte  square.cubin
include/: alg.h  ccf.h  ccs.h  codegen.h  cube.h  desugarer.h  interference.h  kociemba.h  lexer.h  liveness.h  piece.h  preprocessor.h  print_ast.h  program_ast.h  regalloc.h  typechecker.h  util.h
jetbrains-cubyte/: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
lsp/: README.md  pyproject.toml
lsp/cubyte_lsp/: __init__.py  __main__.py  analyzer.py  documents.py  server.py  utils.py
lsp/cubyte_lsp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
lsp/cubyte_lsp/features/: __init__.py  completion.py  definition.py  diagnostics.py  formatting.py  hover.py  symbols.py
lsp/cubyte_lsp/knowledge/: __init__.py  keywords.py  pieces.py  types.py
lsp/cubyte_lsp/protocol/: __init__.py  jsonrpc.py  types.py
lsp/cubyte_lsp/tests/: test_analyzer.py  test_completion_scope.py  test_jsonrpc.py
src/: alg.c  ccf.c  ccs.c  codegen.c  cube.c  desugarer.c  interference.c  kociemba.c  lexer.c  liveness.c  main.c  preprocessor.c  util.c  (+4 more)
(+43 files in other folders)
