[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cubyte-lsp"
version = "0.1.0"
description = "Language Server Protocol implementation for cubyte."
requires-python = ">=3.10"
authors = [{ name = "cubyte authors" }]
# stdlib only: json, asyncio, dataclasses, urllib, subprocess
dependencies = []

[project.scripts]
cubyte-lsp = "cubyte_lsp.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cubyte_lsp*"]
